WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
269058
Fix -Wformat warnings in release log calls
https://bugs.webkit.org/show_bug.cgi?id=269058
Summary
Fix -Wformat warnings in release log calls
Philippe Normand
Reported
2024-02-09 03:39:54 PST
ssia
Attachments
Add attachment
proposed patch, testcase, etc.
Philippe Normand
Comment 1
2024-02-09 03:55:05 PST
Pull request:
https://github.com/WebKit/WebKit/pull/24138
EWS
Comment 2
2024-02-10 12:41:47 PST
Committed
274426@main
(42dcc077d7ec): <
https://commits.webkit.org/274426@main
> Reviewed commits have been landed. Closing PR #24138 and removing active labels.
Radar WebKit Bug Importer
Comment 3
2024-02-10 12:42:16 PST
<
rdar://problem/122718056
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug